--- a/templates/file.html
+++ b/templates/file.html
@@ -1,21 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>File</title>
-</head>
-<body>
-	<p>Тип файла: <?= htmlspecialchars($file->showType()) ?></p>
-	<p>Имя файла: <?= htmlspecialchars($file->showName()) ?></p>
-	<p>Размер файла: <?= htmlspecialchars($file->showSize()) ?></p>
-	<p>Врремя загрузки: <?= htmlspecialchars($file->showUploadtime()) ?></p>
-	<p>Комментарий: <?= htmlspecialchars($file->showComment()) ?></p>
+<a href="/upload">На главную</a>
 
+<p>Тип файла: <?= htmlspecialchars($file->getType()) ?></p>
+<p>Имя файла: <?= htmlspecialchars($file->getName()) ?></p>
+<p>Размер файла: <?= htmlspecialchars($file->getSize()) ?></p>
+<p>Врремя загрузки: <?= htmlspecialchars($file->getUploadtime()) ?></p>
+<p>Комментарий: <?= htmlspecialchars($file->getComment()) ?></p>
 
-	<form method='post' action=''>
-		<input type='submit' name="submit" value='скачать' />
-	</form>
+<? if($showimg): ?><img src="../files/<?= $file->getName() ?>" alt="превью недоступно" style="width: 250px;"><? endif; ?>
+
+<form method='get' action=''>
+	<input type='submit' name="submit" value='скачать' />
+</form>
 	
 
-</body>
-</html>
