--- a/templates/file.html
+++ b/templates/file.html
@@ -1,18 +1,23 @@
-<? require "header.html";?>
+{% extends "base.html" %}
 
-<a href="/upload">На главную</a>
+{% block content %}
 
-<p>Тип файла: <?= htmlspecialchars($file->getType()) ?></p>
-<p>Имя файла: <?= htmlspecialchars($file->getName()) ?></p>
-<p>Размер файла: <?= htmlspecialchars($filesize) ?> Mb</p>
-<p>Врремя загрузки: <?= htmlspecialchars($file->getUploadtime()) ?></p>
-<p>Комментарий: <?= htmlspecialchars($file->getComment()) ?></p>
+    <a href="/upload">На главную</a>
 
-<? if($showimg): ?><img src="../files/<?=$file->getCode()?>.<?=$file->getName() ?>" alt="превью недоступно" style="width: 250px;"><? endif; ?>
+    <p>Тип файла: {{ file.getType() }} </p>
+    <p>Имя файла: {{ file.getName() }} </p>
+    <p>Размер файла: {{ filesize }} Mb </p>
+    <p>Врремя загрузки: {{ file.getUploadtime() }} </p>
+    <p>Комментарий: {{ file.getComment() }} </p>
 
-<form method='get' action=''>
-	<input type='submit' name="submit" value='скачать' />
-</form>
-	
+    {% if(showimg) %}
+    
+        <img src="../files/{{ file.getCode() }}.{{ file.getName() }}" alt="превью недоступно" style="width: 250px;">
 
-<? require "footer.html";?>
+    {% endif %}
+
+    <form method='get' action=''>
+    	<input type='submit' name="submit" value='скачать' />
+    </form>
+
+{% endblock %}
