--- a/templates/list.html
+++ b/templates/list.html
@@ -1,17 +1,19 @@
-<? require "header.html";?>
+{% extends "base.html" %}
 
-<h1>Последние загруженные:</h1>
-<a href="/upload">Вернуться к загрузке</a>
-<br>
-<br>
+{% block content %}
 
-<?  for($i=0;$i<$numfiles;$i++):?>
-		<?= htmlspecialchars($list[$i]->getType()) ?>     <br /> 
-		<?= htmlspecialchars($list[$i]->getName()) ?>  <br />
-		<?= htmlspecialchars(round($list[$i]->getSize()/1048576, 3)) ?> Mb <br />
-		<p><a href="file/<?= htmlspecialchars($list[$i]->getID()) ?>">Загрузить</a></p>
+    <h1>Последние загруженные:</h1>
+    <a href="/upload">Вернуться к загрузке</a>
+    <br>
+    <br>
+
+    {% for i in 0..numfiles-1 %}
+		{{ list[i].getType() }}                      <br/> 
+		{{ list[i].getName() }}                      <br/>
+		{{ (list[i].getSize()/1048576)|round(2, 'ceil') }} Mb <br/>
+		<p><a href="file/{{ list[i].getID() }}">Загрузить</a></p>
 		<br>
 		<br>
-<? endfor; ?>
+    {% endfor %}
 
-<? require "footer.html";?>
+{% endblock %}
